# AlphaFactorFramework

./: CMakeLists.txt  README.md  factor_service.cpp  indicator_service.cpp  main.cpp  run_services.sh  shared_memory_service.cpp
config/: config.xml
data/indicator/20240701/15S/: diff_volume_amount_amount_20240701_15S.csv  volume_20240701_15S.csv
include/: Framework.h  cal_engine.h  calculation_engine.h  compute_utils.h  config.h  config_loader.h  data_loader.h  data_structures.h  diff_indicator.h  factor_utils.h  increasing.h  indicator_storage_helper.h  my_factor.h  my_indicator.h  result_storage.h  rolling.h  series_operators.h  utils.h
src/: config_loader.cpp  data_loader.cpp  diff_indicator.cpp  gseries_impl.cpp  increasing.cpp  increasing_impl.cpp  indicator_storage_helper.cpp  my_factor.cpp  my_indicator.cpp  result_storage.cpp  series_operators.cpp
